# sadness-splitter

./: .gitignore  README.md  aura_dialogues_script.md  generate_audio_map.py  inspect_audio_map.py  test_regex.py
history/: history.md
src/: aura_audio_map.js  index.html  main.js  modal.css  style.css  tour.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/emotive-ani-voice/cpu_panic/: CPU is literally screaming Are we hosting a nasa launch or is your computer just potato.opus  Core thermal throttling! Cooling protocols offline! Thread overload! 🥵🔥.opus  My processors are literally sweating... I'm going to shut down, too much work. 🥵🔥.opus  Oh no! System metrics are sweating! My brain is on fire! 🥵🔥.opus  Oye! System statistics are sweating! Mere dimaag me fire lag gayi hai! 🥵🔥.opus
src/emotive-ani-voice/ffmpeg_missing/: FFmpeg is missing. Whatever, I don't feel like working anyway... 😭.opus  Fatal FFmpeg binary not found in env path. Core operations suspended. 😭.opus  Imagine trying to run a video editor without FFmpeg. Absolutely embarrassing... 😭.opus  Oh no... Please install FFmpeg! Without it, I am nothing... 😭.opus  Oh no... Please install FFmpeg! Without it, I cannot process your files... 😭.opus
src/emotive-ani-voice/interact_about_hover/: About... bragging page. Just let me sleep please. 😜.opus  Expand the about section to witness a monument of self-praise..opus  Expanding developer core profiles and web system definitions. 😜.opus  (+2 more)
(+161 files in other folders)
