[package]
name = "sadness-splitter-3000"
version = "0.1.0"
description = "A beautiful FFmpeg wrapper for emotional baggage."
authors = ["Pumpkin & Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
