[package]
name = "sadness-splitter-3000"
version = "2.0.0-beta"
description = "A beautiful FFmpeg wrapper for emotional baggage."
authors = ["Pumpkin(copilot) & Antigravity(gemini) & Divyanshu_Shopra"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sysinfo = "0.30"
wmi = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
urlencoding = "2"
